# IFSA

./: .gitignore  FILE_STRUCTURE.md  README.md  codex.remote.toml  pyproject.toml  requirements.txt  “鸡头稳定 → 跨被试EEG数据对齐”研究与投稿中科院SCI一区的全流程计划.md  将“鸡头稳定”原理建模并用于跨被试 EEG 数据对齐的可行性、方法与实现方案.md  将“鸡头稳定”原理建模并用于跨被试 EEG 数据对齐的可行性、方法与实现方案_副本.md  将“鸡头稳定”原理建模并用于跨被试脑电数据对齐的可行性、方法与实现方案.md  跨被试脑电运动意图识别中的数据对齐研究综述与工程化指南.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
configs/: config.yaml
configs/dataset/: bci_iv_2a.yaml  bci_iv_2b.yaml  physionet_mi.yaml
configs/experiment/: base.yaml  coral_safe_v1.yaml  coral_v14_lw.yaml  ea_pp.yaml  ea_pp_k0.yaml  ea_pp_no_energy.yaml  ea_pp_no_spec.yaml  ifsa.yaml  ifsa_final_v1.yaml  ifsa_final_v1_no_disc_guard.yaml  ifsa_final_v1_no_low_hold.yaml  ifsa_final_v1_no_safety.yaml  ifsa_final_v1_spd_thrust.yaml  ifsa_final_v2.yaml  ifsa_final_v3.yaml  ifsa_no_damp.yaml  ifsa_no_energy.yaml  ifsa_no_spec.yaml  ifsa_trigger.yaml  ifsa_v11_2a_trans.yaml  ifsa_v11_2a_trans_identity.yaml  ifsa_v11_2a_trans_logema.yaml  ifsa_v11_2a_trans_source_quantile.yaml  ifsa_v11_2b_online.yaml  ifsa_v12_ctrl.yaml  (+81 more)
scripts/: run_benchmark.py
tasks/: prd-eeg-alignment-infra.md
tests/: test_coral.py  test_ea_pp.py  test_ifsa.py  test_ifsa_disc_loss_score.py  test_ifsa_euclid_thrust.py  test_ifsa_low_score_hold_rule.py  test_ifsa_split_half_score.py  test_protocol_leakage.py  test_ra_riemann.py  test_spd.py  test_stats_multi.py  test_tangent.py  test_tl_center_scale_smoke.py  test_tsa_guard.py
(+251 files in other folders)
