[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eapp"
version = "0.1.0"
description = "Cross-subject EEG alignment infra (IFSA / TSA-SS)"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest==9.0.2", "ruff==0.15.2"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["eapp*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
